Commit al master del blogpost en su version mas reciente

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,18 @@
 body {
-    color: brown;
+    color: goldenrod;
     text-align: center;
     font-family: "Arial";
+}
+
+#container {
+   width: 70%;
+   padding: 1rem;
+   text-align: left;
+   border: 1px solid black; 
+   margin: 0 auto;
+}
+
+#post h1 {
+    font-weight: bold;
+    font-size: 20px;
 }
