--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,10 @@ body {
     padding-top: 25px;
     margin: 1rem;
 }
+
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5rem;
+}
